# Line-Follower-Competition

./: README.md
competition/: CMakeLists.txt  package.xml  setup.py
competition/nodes/: .gitignore  line_follower.py
